--- a/sourcing/src/main/resources/templates/crawling_results.html
+++ b/sourcing/src/main/resources/templates/crawling_results.html
@@ -3,6 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Crawling Results</title>
+    
+    <style>
+		/* 테이블 스타일 */
+		table {
+		    width: 100%;
+		    border-collapse: collapse;
+		}
+		
+		/* 테이블 헤더 스타일 */
+		th {
+		    background-color: #f2f2f2;
+		    font-weight: bold;
+		    text-align: left;
+		    padding: 10px;
+		    border: 1px solid #ddd;
+		}
+		
+		/* 테이블 내용 스타일 */
+		td {
+		    padding: 10px;
+		    border: 1px solid #ddd;
+		}
+		
+		/* 짝수 행 배경색 변경 */
+		tr:nth-child(even) {
+		    background-color: #f2f2f2;
+		}
+		
+		/* 마우스 호버 효과 */
+		tr:hover {
+		    background-color: #e0e0e0;
+		}
+	</style>
+    
 </head>
 <body>
     <h1>Crawling Results</h1>
@@ -10,9 +44,11 @@
     <table>
         <thead>
             <tr>
-                <th>Title</th>
-                <th>Link</th>
-                <th>Image</th>
+                <th>제품명</th>
+                <th>구매링크</th>
+                <th>가격</th>
+                <th>구매갯수</th>
+                <th>이미지</th>
             </tr>
         </thead>
         <tbody>
@@ -21,6 +57,8 @@
                 <td>
                     <a th:href="${result.link}" th:text="${result.link}" target="_blank"></a>
                 </td>
+                <td th:text="${result.price}"></td>
+                <td th:text="${result.payCount}"></td>
                 <td>
                     <img th:src="${result.imageUrl}" alt="Product Image">
                 </td>
